# startreerenaissance

./: .classpath  .gitignore  .project  .syntastic_cpp_config  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  Makefile  README.md  assembly.sbt  build.sbt  build.xml  site.yml  tag-instances.py
beagle-rpm/: README.md
beagle-rpm/RPMS/x86_64/: beagle-2.1-0.x86_64.rpm
beagle-rpm/SPECS/: beagle.spec
beagle-rpm/SRPMS/: beagle-2.1-0.src.rpm
deploy/: Makefile  README.md  add-cloudwatch-alarm.py  ansible.cfg  ec2.ini  requirements.txt  site.yml  tag-instances.py
deploy/beagle-rpm/: README.md
deploy/beagle-rpm/RPMS/x86_64/: beagle-2.1-0.x86_64.rpm
deploy/beagle-rpm/SRPMS/: beagle-2.1-0.src.rpm
deploy/group_vars/: all
deploy/roles/prep_analysis/tasks/: main.yml
deploy/roles/prep_analysis/templates/: run_analysis.sh.j2
deploy/roles/sparkmaster/files/: run_analysis.sh
deploy/roles/sparkmaster/tasks/: main.yml
deploy/roles/sparknode/files/: tmux.conf
deploy/roles/sparknode/handlers/: main.yml
deploy/roles/sparknode/tasks/: main.yml
deploy/roles/sparknode/templates/: ec2-user-notty.j2
deploy/roles/sparkslave/tasks/: main.yml
deploy/roles/sparkslave/vars/: main.yml
deploy/spark-ec2/: spark-ec2
group_vars/: all
lib/: beast.COPYING  sam.COPYING
lib/boost_1.54.0/: README.md
lib/boost_1.54.0/libs/program_options/: CMakeLists.txt  Makefile
lib/jsoncpp-src-0.6.0-rc2/src/lib_json/: CMakeLists.txt
lib/nlopt-2.4.1/: CMakeLists.txt
lib/samtools/: CMakeLists.txt
project/: plugins.sbt
roles/beagle/tasks/: main.yml
roles/common/tasks/: main.yml
roles/sparknode/tasks/: main.yml
spark-ec2/: spark_ec2.py
src/: .gitignore  CMakeLists.txt  Makefile  build_mutation_matrices.cpp  config.h.in  eigen_test  eigen_test.cpp  fit_gtr.cpp  fit_star.cpp  gtr.cpp  gtr.hpp  gtrfit_config.h  mutationio.pb.cc  mutationio.pb.h  mutationio.proto  mutationlist.pb.cc  mutationlist.pb.h  mutationlist.proto  protobuftools.hpp  sequence.hpp  star_optim.cpp  star_optim.hpp
src/dr/math/: MathUtils.java
src/main/java/dr/app/beagle/evomodel/substmodel/: RootConditionedCodonPartitionedRobustCounting.java
src/main/java/dr/evomodel/substmodel/: CodonPartitionedRobustCounting.java
src/main/java/dr/math/: MathUtils.java
src/main/java/org/fhcrc/matsen/startree/: FitStarResult.java  HKYModelParser.java  MatrixUtils.java  SAMBEASTUtils.java  SAMUtils.java  StarTreeRenaissance.java  StarTreeRenaissanceResult.java  StarTreeTraces.java  TLambdaPoissonSmoother.java  TwoTaxonResult.java  WeightedEmpiricalBayesPoissonSmoother.java
src/main/java/org/fhcrc/matsen/startree/spark/: StarTreeKryoRegistrator.java
src/main/java/org/fhcrc/matsen/util/: Doubles.java
src/main/scala/org/fhcrc/matsen/startree/: StarTreeMain.scala  UpdateOldJsonResults.scala
src/main/scala/org/fhcrc/matsen/startree/gson/: MatrixSerializer.scala  package.scala
src/main/scala/org/fhcrc/matsen/startree/spark/: StarTreeKryoRegistrator.scala  StarTreeSpark.scala
src/org/fhcrc/matsen/startree/: AlignedPair.java  HKYModelParser.java  Main.java  SAMBEASTUtils.java  SAMUtils.java  StarTreeRenaissance.java  TwoTaxonResult.java
src/org/fhcrc/matsen/startree/spark/: SparkTest.java  StarTreeKryoRegistrator.java  StarTreeSpark.java
src/test/java/org/fhcrc/matsen/startree/: HKYModelParserTest.java  HKYModelParserTestCase.java  SAMBEASTUtilsTestCase.java  StarTreeRenaissanceTest.java  StarTreeRenaissanceTestCase.java  StarTreeTracesTestCase.java  TLambdaPoissonSmootherTest.java  TLambdaPoissonSmootherTestCase.java  TwoTaxonResultTest.java  TwoTaxonResultTestCase.java  WeightedEmpiricalBayesPoissonSmootherTest.java  WeightedEmpiricalBayesPoissonSmootherTestCase.java
src/test/resources/org/fhcrc/matsen/startree/: sample_model.json  sample_model2.json  sample_model3.json
src/test/scala/org/fhcrc/matsen/startree/gson/: SerializationTest.scala
test/: CMakeLists.txt  example_test.cpp  gtr_test.cpp  ighvdj.fasta  ighvdj.fasta.fai  single.xml  test-calcs.R  test-gtr.cpp  test-star_optim.cpp  test.bam  test.cmd  test.fasta  test.py
test/org/fhcrc/matsen/startree/: SAMBEASTUtilsTest.java  StarTreeRenaissanceTest.java
